<resources>
    <string name="app_name">ANIMO</string>
    <string name="login_title">Авторизация</string>
    <string name="action_sign_in">Войти</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_email">Логин</string>
    <string name="m_cur_visits">Текущие визиты</string>
    <string name="m_profile">Профиль</string>
    <string name="text_start_visit">Начать визит</string>
    <string name="text_end_visit">Закончить визит</string>
    <string name="text_default_start_visit">Начало визита:</string>
    <string name="text_default_end_visit">Конец визита:</string>
    <string name="btn_text_end_visit">Закончить визит</string>
    <string name="error_server_lost">Не удалось соедениться с сервером!</string>
    <string name="yours_role_txt">Ваша роль</string>
    <string name="phone_txt">Телефон</string>
    <string name="email_txt">Email</string>
    <string name="create_date_txt">Дата создания</string>
    <string name="preparations_text">Препараты</string>
    <string name="infoPackageText">Информационные пакеты</string>
    <string name="descriptionSharing">Кнопка шеринга</string>
    <string name="descArrow">arrow</string>
    <string name="speciality">Специальность</string>
    <string name="choiceDoctor">Доктор</string>
    <string name="pharmacyTitle">Аптека</string>
    <string name="menu_events">Мероприятия</string>
    <string name="changePassText">Сменить пароль</string>
    <string name="logoutText">Выход</string>
    <string name="changePasswordText">Изменение пароля</string>
    <string name="old_password">Текущий пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="change_password_btn">Сменить пароль</string>
    <string name="hello_user_menu">Здравствуйте, %1$s</string>
    <string name="user_role_menu">Ваша роль, %1$s</string>
    <string name="menu_activity_title">Активность</string>
    <string name="plans_report_titile">Планы/Отчеты</string>
    <string name="search_title">Поиск</string>
    <string name="base_title">База</string>
    <string name="create_plan_title">Создать план</string>
    <string name="pharmacy_title">Аптека</string>
    <string name="plan_date_text">Дата плана</string>
    <string name="description_text">Примечения</string>
    <string name="send_to_plan_btn_text">Отправить в план</string>
    <string name="record_loyalty_string">Заполнение лояльности</string>
    <string name="is_all_search_text">Общая база</string>
    <string name="search_hint">Фамилия, название организации, адрес организации, город, примечание, Email, телефон</string>
    <string name="save_text">Сохранить</string>
    <string name="search_text">Поиск</string>
    <string name="search_pharmacy_hint">Название, фамилия, адрес, город, примечание</string>
    <string name="choice_region">Выберите регион</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="region">Регион</string>
    <string name="city">Город</string>
    <string name="specialization">Специальность</string>
    <string name="edit">Редактирование</string>
    <string name="save">Сохранить</string>
    <string name="pharmacy_name_text">Название</string>
    <string name="is_network">Сетевая</string>
</resources>